working on Peel conflict

--- a/SETSe_conflict_code.Rmd
+++ b/SETSe_conflict_code.Rmd
@@ -3,6 +3,8 @@ title: "Untitled"
 author: "Jonathan Bourne"
 date: "24/07/2020"
 output: html_document
+editor_options: 
+  chunk_output_type: console
 ---
 
 The goal of this code is to test whether SETSe can integrate both the strength of relationships between people, the greater social network and the individual belligerents to predict the outcome of a conflict, or alternatively ascertain the strength of different relationship types from known outcomes.
@@ -41,6 +43,238 @@ list.files("/home/jonno/Useful_PhD__R_Functions", pattern = ".R", full.names = T
 
 ```
 
+ 
+#simple case
+
+This is a few toy examples to show that nodes with stiffer springs will have neighbouring nodes closer than nodes with less stuff springs. The purpose of these examples is to act as explainer and motivator for the idea that SETSe can predict conflict outcome or edge strenth
+
+```{r}
+
+```
+
+
+
+#example conflicts
+This section generates a number of networks using some method. It applies edge strengths and shows that consistant edge rules provide consistant results across randomly generated networks and node positions.
+
+all experiments should comment on the comparison with betweeness centrality and also community detection techniques. This should show that SETSe can produce an outcome that the other methods can't
+
+##Fixed edge strengths
+This section uses fixed edge strengths for each relationship type.
+
+generate network
+
+If I generate 100 examples of each combination of agreement for all graph types, then plot the win ratio matrices for all combinations. This will show that certain subclasses have an advantage over others and this differs according to network topology.
+
+I can then change the edge weights and repeat. this will show the importance of edge weights in the result.
+
+```{r}
+
+#What I want to know.
+#fraction of total nodes? aka did they win?
+#How many times?
+#What about centrality?
+#what about communitys
+
+peels_class_k <- function(g, k_levels = c(1000, 500, 100)){
+  
+  g_df_vertices <- as_data_frame(g, what = "vertices")
+  
+  g_df_edges <- as_data_frame(g, what = "edges") %>%
+    left_join(g_df_vertices, by = c("from"="name")) %>%
+    left_join(g_df_vertices, by = c("to"="name")) %>%
+    mutate(class_match = class.x == class.y,
+           sub_class_match = sub_class.x == sub_class.y,
+           k = case_when(
+             class_match & sub_class_match ~ k_levels[1], #sub class match
+             class_match & !sub_class_match ~ k_levels[2], #class amtch
+             TRUE ~k_levels[3] #no match
+             
+           )) %>%
+    {.[,c(1,2,9)]}
+  
+  g <- graph_from_data_frame(g_df_edges, directed = FALSE, vertices = g_df_vertices)
+  
+  return(g)
+  
+}
+
+#first node is always positive
+two_beligerent_conflict <- function(g, beligerents){
+  
+  force_vect <- rep(0, vcount(g))
+  
+  force_vect[beligerents] <- c(1,-1)
+  
+  g <- set.vertex.attribute(g, "force", value = force_vect)
+  
+  return(g)
+  
+}
+
+
+two_beligerent_conflict <- function(g, beligerents){
+  
+  force_vect <- rep(0, vcount(g))
+  
+  force_vect[beligerents] <- c(1,-1)
+  
+  v_df <- as_data_frame(g, what = "vertices") %>%
+    mutate(force = case_when(
+      name == beligerents[1] ~1,
+      name == beligerents[2] ~-1,
+      TRUE ~0
+      
+    ))
+  
+  e_df <- as_data_frame(g, what = "edges")
+  
+  g <- graph_from_data_frame(e_df, directed = FALSE, vertices = v_df)
+  
+  return(g)
+  
+}
+
+
+
+g <- generate_peels_network(type = "A") %>%
+  remove_small_components() %>%
+  peels_class_k(., k_levels = c(1000, 500, 100)) %>%
+  prepare_SETSe_binary(
+    node_names = "name",
+    force_var = "class",
+    positive_value = "A") 
+
+
+#which nodes to compare against
+
+
+#The first node of a_1 vs a_1 generally loses on type C why? It should be equal
+#It doesn't matter if you reverse the nodes being choses
+peels_results <- peel_conflicts(graph_types = LETTERS[1:5],
+  beligerents =  tibble(node1 = c(1, 1,1,1, 11,11,11,21,21,31), 
+                        node2 = c(2,11,21,31, 12,21,31,22,31,32)), #nodes to test
+   k_levels = c(100,550,1000),
+  samples = 100)
+
+
+peels_results2 <- peel_conflicts(graph_types = LETTERS[1:5],
+  beligerents =  tibble(node1 = c(1, 1,1,1, 11,11,11,21,21,31), 
+                        node2 = c(2,11,21,31, 12,21,31,22,31,32)), #nodes to test
+  k_levels = c(100,100,100),
+  samples = 100)
+
+
+peels_results3 <- peel_conflicts(graph_types = LETTERS[1:5],
+  beligerents =  tibble(node1 = c(1, 1,1,1, 11,11,11,21,21,31), 
+                        node2 = c(2,11,21,31, 12,21,31,22,31,32)), #nodes to test
+  k_levels = c(100,5050,10000),
+  samples = 100)
+
+
+
+peels_results %>%
+  ggplot(aes(x = clustering_elev_fract, y = betweenness_ratio)) + geom_point()
+
+
+peels_results3 %>%
+  ggplot(aes(x = paste(sub_class, sub_class2), y = clustering_elev_fract)) + geom_boxplot()+
+  facet_wrap(~graph_type) + theme(axis.text.x = element_text(angle = 45, vjust = 1, hjust=1))
+
+
+test <- peels_results %>%
+  group_by(graph_type, sub_class, sub_class2) %>%
+  summarise_all(mean)
+
+
+
+test <- peel_conflicts(graph_type = "E",
+  beligerents =  tibble(node1 = c(1, 4), 
+                        node2 = c(2, 34)), #nodes to test
+   k_levels = c(100,550,1000),
+  samples = 5)
+
+peels_results3 %>%
+  bind_rows(peels_results %>%
+  rename(sub_class3 = sub_class, 
+         sub_class = sub_class2) %>%
+  rename(sub_class2 = sub_class3) %>%
+    mutate(clustering_elev_fract = 1-clustering_elev_fract)) %>%
+  ggplot(aes(x = sub_class, y = sub_class2, fill = clustering_elev_fract)) + geom_raster() +
+  scale_fill_viridis_c()+
+  facet_wrap(~graph_type)
+
+
+saveRDS(test, file.path(PLwd, "peel_conflict.rds")  )
+
+
+test <-bind_rows(peels_results %>% mutate(type = "10x"),
+          peels_results2 %>% mutate(type = "1x"),
+          peels_results3 %>% mutate(type = "100x"))
+
+test %>%
+  filter(graph_type != "A") %>%
+  filter(sub_class != sub_class2) %>% #against self just isn't interesting 
+  ggplot(aes(x = paste(sub_class, sub_class2), y = clustering_elev_fract, fill = type)) + geom_boxplot()+
+  facet_wrap(~graph_type) + theme(axis.text.x = element_text(angle = 45, vjust = 1, hjust=1))+
+  scale_fill_brewer(type = "qual")
+
+
+
+
+
+#every combination of node
+combinations <- t(combn(1:40, 2))
+
+peels_results <- peel_conflicts(graph_type = "C",
+  beligerents = tibble(node1 = combinations[,1], 
+                       node2 = combinations[,2]), #nodes to test
+  k_levels = c(100,550,1000),
+  samples = 1)
+
+
+peels_results %>%
+  ggplot(aes(x = node1, y = node2, fill = clustering_elev_fract>0.5)) + geom_raster()
+
+peels_results_uniform <- peel_conflicts(graph_type = "C",
+  beligerents = tibble(node1 = combinations[,1], 
+                       node2 = combinations[,2]), #nodes to test
+  k_levels = c(100,100,100),
+  samples = 1)
+
+
+performance_change <- peel_conflict_performance(peels_results, peels_results_uniform)
+
+performance_change %>%
+  ggplot(aes(x = rank, y = rank_uniform))+ geom_point()
+
+
+performance_change %>%
+  arrange(rank_change) %>%
+  ggplot(aes(x = 1:40, y = rank_change))+ geom_point()
+
+```
+comparing the conflict of everynode to every other node allows us to find nodes that are better positioned for that network setup. either purely topologically or accounting for edge strength
+
+comparing the same graph using different edge strength allows a direct comparison of the impact of edge strength.
+
+We can then identify the nodes who experience the greatest relative strength change when accounting for edges and the point at which the switch occurs
+
+
+randomly assign edge strengths
+```{r}
+
+```
+
+
+##distribution edges
+
+This shows the effect of using increaingly wide ranges of possible edge stiffnesses to predict the outcome of conflict.
+I expect that when the uncertainty becomes larger the reliability drops.
+
+
+
+
 
 
 #Conflict networks
@@ -71,10 +305,12 @@ The traditional metrics are identical for both of the conlfict types and in fact
 
 ```{r}
 
+#What is notable is that the medici can lose the conflict but are never less central  (lowwr betweeness) than the Strozzi or the Albizzi. This supports the simple case of a line of nodes where the centrality  of the nodes at each end is equal.
+
 source(file = file.path(SubcodeFolder, "medici_process.R"))
 
 AlbizziandStrozzi %>%
-  filter(separate_succcess) %>%
+  filter(separate_success) %>%
   select(1:6, ratio) %>%
   pivot_longer(cols = 2:6, names_to = "metric", values_to = "values") %>%
     filter(metric !="ARI") %>%
@@ -143,7 +379,7 @@ Kapferer_aggregated %>%
   left_join(kapferer_separation) %>%
   filter(value == "Abraham"| value == "Benson", 
         # cluster_method == "SETSe_kmeans",
-        separate_succcess,
+        separate_success,
         cluster_method != "SETSe_kmeans"
          ) %>%
   ggplot(aes(x = ratio, y = fract, colour =str_remove(cluster_method, "clustering_") %>% str_replace(., "_", " "))) + geom_line() +
@@ -253,3 +489,34 @@ plot(g_dl[[3]])
 names(g_dl)
 
 ```
+
+
+
+#highschool
+
+This is to see if using the highschool data I can generate more distinct results relateing to spring strength as the networks are actual social networks as opposed to random structures.
+
+```{r}
+
+
+set.seed(123)
+g <- read_rds(file.path(PLwd, "highschool/graphs", "school_77.rds" ))  %>% simplify() %>% {
+  set_edge_attr(., "k", value = sample(c(100, 1000), ecount(.), replace = T)) }
+
+
+g_df <- as_data_frame(g, what = "vertices")
+
+g <- g %>% 
+two_beligerent_conflict(., beligerents = c(19, 23)) %>%
+  prepare_SETSe_continuous(. , node_names = "name", force_var = "force")
+
+results <- auto_SETSe(g)
+
+sum(results$node_embeddings$elevation>0)
+sum(results$node_embeddings$elevation<0)
+
+```
+
+
+	
+	
